--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -4,7 +4,10 @@
           android:versionCode="1"
           android:versionName="0.1">
 
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
     <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <supports-screens android:xlargeScreens="true" />
 
     <application
         android:allowBackup="false"
