Add JSON configuration file loading support for glimpse ui properties

--- a/meson.build
+++ b/meson.build
@@ -105,6 +105,7 @@ imgui_src = [
 ]
 
 client_api_src = [
+    'src/glimpse_config.cc',
     'src/glimpse_context.cc',
     'src/glimpse_device.cc',
     'src/glimpse_assets.c',
