Add data capture/playback capability to glimpse/glimpse_viewer

--- a/meson.build
+++ b/meson.build
@@ -128,6 +128,7 @@ client_api_src = [
     'src/glimpse_config.cc',
     'src/glimpse_context.cc',
     'src/glimpse_device.cc',
+    'src/glimpse_record.cc',
     'src/glimpse_assets.c',
     'src/glimpse_mem_pool.cc',
     'src/glimpse_log.c',
