Tango config tweaks

--- a/src/tango-config.json
+++ b/src/tango-config.json
@@ -1,16 +1,18 @@
 {
     "gap_dist": 2,
+    "depth_gap_fill": true,
+    "apply_depth_distortion": true,
     "cloud_res": 1,
     "min_depth": 0.27600002288818359,
     "max_depth": 3.8070001602172852,
     "seg_res": 1,
     "normal_depth_change": 0.079000003635883331,
     "normal_smooth": 2.0440001487731934,
-    "min_inliers": 15,
-    "angular_threshold": 17.217000961303711,
+    "min_inliers": 50,
+    "angular_threshold": 12.007000923156738,
     "distance_threshold": 0.061000004410743713,
-    "refinement_distance_threshold": 0.051000002771615982,
-    "max_curvature": 0.010000000707805157,
+    "refinement_distance_threshold": 0.040000002831220627,
+    "max_curvature": 0.01100000087171793,
     "cluster_tolerance": 0.10000000149011612,
     "joint_refinement": true,
     "joint_max_predictions": 4,
