--- a/src/tango-config.json
+++ b/src/tango-config.json
@@ -1,21 +1,22 @@
 {
     "gap_dist": 2,
+    "gap_tolerance": 0.035000000149011612,
     "depth_gap_fill": true,
     "apply_depth_distortion": true,
     "cloud_res": 1,
     "min_depth": 0.27600002288818359,
-    "max_depth": 3.8070001602172852,
+    "max_depth": 4.1740002632141113,
     "seg_res": 1,
-    "normal_depth_change": 0.079000003635883331,
-    "normal_smooth": 2.0440001487731934,
-    "min_inliers": 50,
-    "angular_threshold": 12.007000923156738,
-    "distance_threshold": 0.061000004410743713,
-    "refinement_distance_threshold": 0.040000002831220627,
-    "max_curvature": 0.01100000087171793,
-    "cluster_tolerance": 0.10000000149011612,
+    "normal_depth_change": 0.048000000417232513,
+    "normal_smooth": 2.1440000534057617,
+    "min_inliers": 60,
+    "angular_threshold": 10.271000862121582,
+    "distance_threshold": 0.10200000554323196,
+    "refinement_distance_threshold": 0.045000001788139343,
+    "max_curvature": 0.0060000000521540642,
+    "cluster_tolerance": 0.065000005066394806,
     "joint_refinement": true,
-    "joint_max_predictions": 4,
+    "joint_max_predictions": 8,
     "min_confidence": 300,
     "joint_move_threshold": 1.5,
     "joint_max_travel": 3,
