--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -38,16 +38,17 @@ RUN sed -i 's/pcl_2d-1.8//' /usr/lib/x86_64-linux-gnu/pkgconfig/pcl_features-1.8
 
 # Installs Android NDK and creates the toolchain
 ENV ANDROID_NDK_VERSION r16b
-ENV ANDROID_NDK_FILENAME android-ndk-$ANDROID_NDK_VERSION-linux-x86_64.zip
+ENV ANDROID_NDK_HOME /android-ndk-${ANDROID_NDK_VERSION}
+ENV ANDROID_NDK_FILENAME android-ndk-${ANDROID_NDK_VERSION}-linux-x86_64.zip
 ENV ANDROID_TOOLCHAIN /android-arm-toolchain-24
-ENV PATH $ANDROID_TOOLCHAIN/bin:$PATH
+ENV PATH ${ANDROID_TOOLCHAIN}/bin:$PATH
 RUN echo "Downloading android-ndk" >&2 && \
-    wget --no-check-certificate --no-verbose https://dl.google.com/android/repository/$ANDROID_NDK_FILENAME && \
+    wget --no-check-certificate --no-verbose https://dl.google.com/android/repository/${ANDROID_NDK_FILENAME} && \
     echo "Extracting android-ndk" >&2 && \
-    unzip -q $ANDROID_NDK_FILENAME && \
-    mkdir -p $ANDROID_TOOLCHAIN && \
-    android-ndk-$ANDROID_NDK_VERSION/build/tools/make_standalone_toolchain.py --force --install-dir $ANDROID_TOOLCHAIN --arch arm --api 24 --stl libc++ && \
-    rm $ANDROID_NDK_FILENAME
+    unzip ${ANDROID_NDK_FILENAME} && \
+    mkdir -p ${ANDROID_TOOLCHAIN} && \
+    ${ANDROID_NDK_HOME}/build/tools/make_standalone_toolchain.py --force --install-dir ${ANDROID_TOOLCHAIN} --arch arm --api 24 --stl libc++ && \
+    rm ${ANDROID_NDK_FILENAME}
 
 # Installing Android SDK compat libraries
 RUN dpkg --add-architecture i386
@@ -65,8 +66,7 @@ ENV ANDROID_SDK_FILENAME sdk-tools-linux-${ANDROID_SDK_VERSION}.zip
 ENV ANDROID_HOME /android-sdk
 ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
 
-RUN mkdir -p $ANDROID_HOME && \
-    cd $ANDROID_HOME && \
+RUN mkdir -p ${ANDROID_HOME} && \
     echo "Downloading android-sdk" >&2 && \
     wget --no-check-certificate --no-verbose https://dl.google.com/android/repository/${ANDROID_SDK_FILENAME} && \
     echo "Extracting android-sdk" >&2 && \
