Update the Tango config to perform better
Perform more tweaking on the Tango config to get more consistent/good
results. At this point, we may want to consider these being the defaults.

--- a/src/tango-config.json
+++ b/src/tango-config.json
@@ -1,25 +1,18 @@
 {
-    "gap_dist": 2,
-    "gap_tolerance": 0.035000000149011612,
+    "gap_dist": 1,
+    "gap_tolerance": 0.035,
     "depth_gap_fill": true,
     "apply_depth_distortion": true,
     "cloud_res": 1,
-    "min_depth": 0.27600002288818359,
-    "max_depth": 4.1740002632141113,
+    "min_depth": 0.25,
+    "max_depth": 4.0,
     "seg_res": 1,
-    "normal_depth_change": 0.048000000417232513,
-    "normal_smooth": 2.1440000534057617,
+    "normal_depth_change": 0.03,
+    "normal_smooth": 4.0,
     "min_inliers": 60,
-    "angular_threshold": 10.271000862121582,
-    "distance_threshold": 0.10200000554323196,
-    "refinement_distance_threshold": 0.045000001788139343,
-    "max_curvature": 0.0060000000521540642,
-    "cluster_tolerance": 0.065000005066394806,
-    "joint_refinement": true,
-    "joint_max_predictions": 8,
-    "min_confidence": 300,
-    "joint_move_threshold": 1.5,
-    "joint_max_travel": 3,
-    "joint_scale_threshold": 2.5,
-    "debug_label": "most likely"
+    "angular_threshold": 11.0,
+    "distance_threshold": 0.1,
+    "refinement_distance_threshold": 0.05,
+    "max_curvature": 0.007,
+    "cluster_tolerance": 0.13
 }
