Switch over to the Wikipedia interpretation of Brown-Conrady distortion
This seems to provide better results than the (probably misdocumented?)
Google interpretation and lets us turn down the strength of the gap-
filling algorithm.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ tree?.json
 /src/.deps
 /src/depth2labels
 /src/exr-to-pfm
+/src/glimpse_viewer_recording
 /src/image-pre-processor
 /src/libglimpse.so
 /src/pack-training-data
