--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,13 @@ tree?.json
 /subprojects/glm-0.9.9-a2
 /subprojects/libpng-1.6.17
 /subprojects/pcl
+/subprojects/glfm/
+/subprojects/libepoxy/
+/subprojects/libfreenect-glimpse/
 /subprojects/packagecache/0.9.9-a2.tar.gz
 /subprojects/packagecache/1.9.1.tar.gz
 /subprojects/packagecache/boost_1_65_1.tar.bz2
 /subprojects/packagecache/eigen-git-mirror-3.3.4.zip
 /subprojects/packagecache/libpng-1.6.17.tar.xz
+/subprojects/packagecache/libfreenect-glimpse.zip
 /subprojects/packagecache/tmp*
