--- a/meson.build
+++ b/meson.build
@@ -285,7 +285,7 @@ if platform_ios == true
     glfm_dep = glfm_sp.get_variable('glfm_dep')
 
     viewer_deps = client_api_deps + [ glfm_dep ]
-    viewer_defines = client_api_defines + [ '-DUSE_GLFM' ]
+    viewer_defines = client_api_defines + [ '-DUSE_GLFM', '-DUSE_AVF' ]
 
     imgui_src += 'src/imgui/imgui_impl_glfm_gles3.cpp'
 
