Remove GNU style indentation from glimpse_rdt.cc
This also renames train_rdt.cc -> glimpse_rdt.cc

The plan is to start refactoring this into shared code

--- a/meson.build
+++ b/meson.build
@@ -347,7 +347,7 @@ executable('image-pre-processor',
            dependencies: [ libpng_dep, threads_dep ])
 
 executable('train_rdt',
-           [ 'src/train_rdt.cc',
+           [ 'src/glimpse_rdt.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
              'src/loader.cc',
